cabal-version:       2.4
name:                mu
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/vzwGrey/mu
bug-reports:         https://github.com/vzwGrey/mu/issues
license:             MIT
license-file:        LICENSE
author:              vzwGrey
maintainer:          vzwGrey <vzwgrey@gmail.com>
copyright:           2020 vzwGrey
category:            Parsing
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/vzwGrey/mu.git

common common-options
  build-depends:       base ^>= 4.13.0.0,
                       megaparsec,
                       text,
                       containers,
                       mtl,
                       parser-combinators

  default-extensions:  OverloadedStrings

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable mu
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Mu.Parser
                       Mu.Evaluator
                       Mu.Util
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
